feature/disable-update-notifications: Disabled the update notifications.

--- a/config/sata_colombia/default/acquia_connector.settings.yml
+++ b/config/sata_colombia/default/acquia_connector.settings.yml
@@ -32,7 +32,7 @@ spi:
     variables: {  }
     time: 0
   cron_interval: 28800
-  site_environment: prod
+  site_environment: null
   site_uuid: 43f68812-2b44-412f-86ba-502e2e130945
   env_detection_enabled: true
 mapping:
