--- a/config/gearwrench/default/update.settings.yml
+++ b/config/gearwrench/default/update.settings.yml
@@ -1,13 +1,12 @@
 _core:
   default_config_hash: 2QzULf0zovJQx3J06Y9rufzzfi-CY2CTTlEfJJh2Qyw
 check:
-  disabled_extensions: true
+  disabled_extensions: false
   interval_days: 7
 fetch:
   url: ''
   max_attempts: 2
   timeout: 30
 notification:
-  emails:
-    - patrick.thurmond@vmlyr.com
+  emails: {  }
   threshold: security
