--- a/config/sata_colombia/default/update.settings.yml
+++ b/config/sata_colombia/default/update.settings.yml
@@ -1,11 +1,10 @@
 check:
-  disabled_extensions: true
+  disabled_extensions: false
   interval_days: 7
 fetch:
   url: ''
   max_attempts: 2
   timeout: 30
 notification:
-  emails:
-    - patrick.thurmond@vmlyr.com
+  emails: {  }
   threshold: security
