--- a/config/sata_emea/default/system.date.yml
+++ b/config/sata_emea/default/system.date.yml
@@ -1,8 +1,8 @@
 first_day: 0
 country:
-  default: BR
+  default: GB
 timezone:
-  default: America/Chicago
+  default: Europe/London
   user:
     configurable: true
     default: 0
