--- a/config/crescenttool/default/core.entity_view_display.node.landing_page.full.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.landing_page.full.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - node.type.landing_page
   module:
     - entity_reference_revisions
@@ -26,6 +27,15 @@ content:
       link: ''
     third_party_settings: {  }
     weight: 0
+    region: content
+  field_top_message_cta_bar:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 1
     region: content
 hidden:
   body: true
