--- a/config/crescenttool/default/core.entity_view_display.node.page.block_title.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.page.block_title.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_top_message_cta_bar
     - node.type.page
   module:
     - user
@@ -23,6 +24,7 @@ hidden:
   field_link: true
   field_media: true
   field_meta_tags: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
