--- a/config/crescenttool/default/core.entity_view_display.node.page.default.yml
+++ b/config/crescenttool/default/core.entity_view_display.node.page.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_top_message_cta_bar
     - node.type.page
   module:
     - link
@@ -28,7 +29,7 @@ content:
       rel: ''
       target: ''
     third_party_settings: {  }
-    weight: 3
+    weight: 2
     region: content
   field_media:
     type: entity_reference_label
@@ -36,18 +37,19 @@ content:
     settings:
       link: true
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
   field_meta_tags:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
 hidden:
   body: true
   field_components: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
