--- a/config/crescenttool_au/default/core.entity_view_display.node.landing_page.block_title.yml
+++ b/config/crescenttool_au/default/core.entity_view_display.node.landing_page.block_title.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - node.type.landing_page
   module:
     - entity_reference_revisions
@@ -34,6 +35,7 @@ hidden:
   field_components: true
   field_media: true
   field_meta_tags: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
