--- a/config/crescenttool_au/default/core.entity_view_display.node.landing_page.default.yml
+++ b/config/crescenttool_au/default/core.entity_view_display.node.landing_page.default.yml
@@ -8,8 +8,10 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - node.type.landing_page
   module:
+    - entity_reference_revisions
     - metatag
     - user
 _core:
@@ -34,6 +36,15 @@ content:
     settings: {  }
     third_party_settings: {  }
     weight: 2
+    region: content
+  field_top_message_cta_bar:
+    type: entity_reference_revisions_entity_view
+    label: above
+    settings:
+      view_mode: default
+      link: ''
+    third_party_settings: {  }
+    weight: 3
     region: content
 hidden:
   body: true
