--- a/config/gearwrench/default/core.entity_view_display.node.landing_page.teaser.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.landing_page.teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - image.style.small_1x1
     - node.type.landing_page
   module:
@@ -55,13 +56,10 @@ content:
       overlay: ''
       title: ''
       vanilla: false
-      icon: ''
       layout: ''
       view_mode: default
       cache: 0
-      current_view_mode: teaser
       skin: ''
-      fx: ''
       style: ''
       background: false
       box_caption: ''
@@ -73,13 +71,16 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
-      _uri: ''
-      breakpoints: {  }
-      sizes: ''
-      grid_header: ''
       grid: '0'
       grid_medium: '0'
       grid_small: '0'
+      breakpoints: {  }
+      current_view_mode: teaser
+      fx: ''
+      icon: ''
+      sizes: ''
+      grid_header: ''
+      _uri: ''
     third_party_settings: {  }
     weight: 0
     region: content
@@ -87,6 +88,7 @@ hidden:
   field_component_hero: true
   field_components: true
   field_meta_tags: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
