GW AU top emssage cta bar configs

--- a/config/gearwrench_au/default/core.entity_view_display.node.page.teaser.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.page.teaser.yml
@@ -6,8 +6,10 @@ dependencies:
     - core.entity_view_mode.node.teaser
     - field.field.node.page.body
     - field.field.node.page.field_components
+    - field.field.node.page.field_link
     - field.field.node.page.field_media
     - field.field.node.page.field_meta_tags
+    - field.field.node.page.field_top_message_cta_bar
     - image.style.small_1x1
     - node.type.page
   module:
@@ -48,11 +50,9 @@ content:
         title: '0'
         alt: '0'
       optionset: default
-      icon: ''
       layout: ''
       view_mode: ''
       cache: 0
-      current_view_mode: teaser
       skin: ''
       style: ''
       background: false
@@ -65,6 +65,9 @@ content:
       media_switch: ''
       ratio: ''
       thumbnail_style: ''
+      grid: '0'
+      grid_medium: '0'
+      grid_small: '0'
       breakpoints:
         xs:
           breakpoint: ''
@@ -86,11 +89,10 @@ content:
           breakpoint: ''
           width: ''
           image_style: ''
+      current_view_mode: teaser
+      icon: ''
       sizes: ''
       grid_header: ''
-      grid: '0'
-      grid_medium: '0'
-      grid_small: '0'
       iframe_lazy: true
     third_party_settings: {  }
     weight: 0
@@ -99,6 +101,7 @@ hidden:
   field_components: true
   field_link: true
   field_meta_tags: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
