--- a/config/gearwrench_au/default/core.entity_view_display.node.landing_page.default.yml
+++ b/config/gearwrench_au/default/core.entity_view_display.node.landing_page.default.yml
@@ -8,6 +8,7 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - node.type.landing_page
   module:
     - metatag
@@ -26,19 +27,20 @@ content:
       view_mode: default
       link: false
     third_party_settings: {  }
-    weight: 1
+    weight: 0
     region: content
   field_meta_tags:
     type: metatag_empty_formatter
     label: above
     settings: {  }
     third_party_settings: {  }
-    weight: 2
+    weight: 1
     region: content
 hidden:
   body: true
   field_component_hero: true
   field_components: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
