--- a/config/sata_brazil/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sata_brazil/default/core.entity_form_display.node.landing_page.default.yml
@@ -8,9 +8,11 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - node.type.landing_page
   module:
     - allowed_formats
+    - entity_reference_revisions
     - field_group
     - limited_field_widgets
     - media_library
@@ -135,6 +137,16 @@ content:
     region: content
     settings:
       sidebar: true
+    third_party_settings: {  }
+  field_top_message_cta_bar:
+    type: entity_reference_revisions_autocomplete
+    weight: 26
+    region: content
+    settings:
+      match_operator: CONTAINS
+      match_limit: 10
+      size: 60
+      placeholder: ''
     third_party_settings: {  }
   langcode:
     type: language_select
