--- a/config/sata_emea/default/core.entity_view_display.node.landing_page.teaser.yml
+++ b/config/sata_emea/default/core.entity_view_display.node.landing_page.teaser.yml
@@ -9,6 +9,7 @@ dependencies:
     - field.field.node.landing_page.field_components
     - field.field.node.landing_page.field_media
     - field.field.node.landing_page.field_meta_tags
+    - field.field.node.landing_page.field_top_message_cta_bar
     - image.style.small_1x1
     - node.type.landing_page
   module:
@@ -98,6 +99,7 @@ hidden:
   field_component_hero: true
   field_components: true
   field_meta_tags: true
+  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
