--- a/config/crescenttool_au/default/core.entity_view_display.node.landing_page.full.yml
+++ b/config/crescenttool_au/default/core.entity_view_display.node.landing_page.full.yml
@@ -30,12 +30,20 @@ content:
     third_party_settings: {  }
     weight: 0
     region: content
+  field_top_message_cta_bar:
+    type: entity_reference_revisions_entity_view
+    label: hidden
+    settings:
+      view_mode: full
+      link: ''
+    third_party_settings: {  }
+    weight: 1
+    region: content
 hidden:
   body: true
   field_component_hero: true
   field_media: true
   field_meta_tags: true
-  field_top_message_cta_bar: true
   langcode: true
   links: true
   search_api_excerpt: true
