--- a/config/crescenttool_au/default/core.entity_view_display.node.page.full.yml
+++ b/config/crescenttool_au/default/core.entity_view_display.node.page.full.yml
@@ -157,7 +157,7 @@ content:
     type: entity_reference_revisions_entity_view
     label: above
     settings:
-      view_mode: default
+      view_mode: full
       link: ''
     third_party_settings: {  }
     weight: 3
