SATA: Added top message ct bar libraries, created css and js file and twig template

--- a/docroot/themes/custom/sata/sata.libraries.yml
+++ b/docroot/themes/custom/sata/sata.libraries.yml
@@ -560,6 +560,18 @@ paragraph--full--tabs:
     - core/jquery.once
     - sata/library--jquery-roving-tabindex
 
+# Top Message CTA Bar #
+paragraph--full--top-message-cta-bar:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--top-message-cta-bar.css: { }
+  js:
+    js/libraries/paragraph/full--top-message-cta-bar.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
 
 
 # ========= Region ========= #
