--- a/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
+++ b/docroot/themes/custom/crescenttool/crescenttool.libraries.yml
@@ -533,6 +533,18 @@ paragraph--full--tabs:
     - core/jquery.once
     - crescenttool/library--jquery-roving-tabindex
 
+# Top Message CTA Bar #
+paragraph--full--top-message-cta-bar:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--top-message-cta-bar.css: { }
+  js:
+    js/libraries/paragraph/full--top-message-cta-bar.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
 
 
 # ========= Region ========= #
