feature/VYRKCATG-560: Added the hreflang_external metatag module so that I can include references to other locales and languages for EMEA to reference the current page. Had to do cleanup for the homepage with a hook.

--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         "drupal/entity_clone": "^1.0@beta",
         "drupal/entity_reference_revisions": "^1.9",
         "drupal/environment_indicator": "^4.0",
+        "drupal/external_hreflang": "^2.0",
         "drupal/extlink": "^1.6",
         "drupal/field_group": "^3.0",
         "drupal/field_group_settings": "^3.0",
