--- a/config/sata_emea/default/metatag.metatag_defaults.global.yml
+++ b/config/sata_emea/default/metatag.metatag_defaults.global.yml
@@ -5,41 +5,43 @@ dependencies: {  }
 id: global
 label: Global
 tags:
-  title: '[current-page:title] | [site:name]'
-  canonical_url: '[current-page:url]'
   apple_touch_icon: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-60x60.png'
-  apple_touch_icon_76x76: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-76x76.png'
-  apple_touch_icon_precomposed_180x180: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-180x180-precomposed.png'
-  apple_touch_icon_precomposed_72x72: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-72x72-precomposed.png'
-  icon_192x192: '[theme-filter:path-to-theme]/favicons/icon-192x192.png'
-  apple_touch_icon_precomposed_152x152: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-152x152-precomposed.png'
-  apple_touch_icon_120x120: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-120x120.png'
-  shortcut_icon: '[theme-filter:path-to-theme]/favicons/favicon.ico'
-  icon_96x96: '[theme-filter:path-to-theme]/favicons/icon-96x96.png'
-  apple_touch_icon_precomposed_76x76: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-76x76-precomposed.png'
-  apple_touch_icon_152x152: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-152x152.png'
-  apple_touch_icon_precomposed_120x120: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-120x120-precomposed.png'
-  apple_touch_icon_72x72: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-72x72.png'
-  apple_touch_icon_180x180: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-180x180.png'
-  icon_32x32: '[theme-filter:path-to-theme]/favicons/icon-32x32.png'
-  apple_touch_icon_precomposed_144x144: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-144x144-precomposed.png'
   apple_touch_icon_114x114: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-114x114.png'
-  icon_16x16: '[theme-filter:path-to-theme]/favicons/icon-16x16.png'
+  apple_touch_icon_120x120: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-120x120.png'
+  apple_touch_icon_144x144: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-144x144.png'
+  apple_touch_icon_152x152: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-152x152.png'
+  apple_touch_icon_180x180: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-180x180.png'
+  apple_touch_icon_72x72: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-72x72.png'
+  apple_touch_icon_76x76: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-76x76.png'
   apple_touch_icon_precomposed: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-57x57-precomposed.png'
   apple_touch_icon_precomposed_114x114: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-114x114-precomposed.png'
-  apple_touch_icon_144x144: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-144x144.png'
-  msapplication_wide310x150logo: '[theme-filter:path-to-theme]/favicons/mstile-310x150.png'
-  msapplication_square310x310logo: '[theme-filter:path-to-theme]/favicons/mstile-310x310.png'
-  msapplication_config: '[theme-filter:path-to-theme]/favicons/browserconfig.xml'
-  android_manifest: '[theme-filter:path-to-theme]/favicons/manifest.json'
-  msapplication_square70x70logo: '[theme-filter:path-to-theme]/favicons/mstile-70x70.png'
-  msapplication_tilecolor: '#d71d24'
-  msapplication_square150x150logo: '[theme-filter:path-to-theme]/favicons/mstile-150x150.png'
-  og_url: '[current-page:url]'
-  og_site_name: '[site:name]'
-  og_title: '[node:title] | [site:name]'
-  twitter_cards_page_url: '[current-page:url]'
-  twitter_cards_type: summary
-  twitter_cards_title: '[node:title]'
+  apple_touch_icon_precomposed_120x120: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-120x120-precomposed.png'
+  apple_touch_icon_precomposed_144x144: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-144x144-precomposed.png'
+  apple_touch_icon_precomposed_152x152: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-152x152-precomposed.png'
+  apple_touch_icon_precomposed_180x180: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-180x180-precomposed.png'
+  apple_touch_icon_precomposed_72x72: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-72x72-precomposed.png'
+  apple_touch_icon_precomposed_76x76: '[theme-filter:path-to-theme]/favicons/apple-touch-icon-76x76-precomposed.png'
+  canonical_url: '[current-page:url]'
+  hreflang_external: "bg-BG|[node:url]\r\ncs-CZ|[node:url]\r\nda-DK|[node:url]\r\nfi-FI|[node:url]\r\nde-DE|[node:url]\r\nak-GH|[node:url]\r\nhu-HU|[node:url]\r\nit-IT|[node:url]\r\nar-SA|[node:url]\r\nlt-LT|[node:url]\r\ndv-MV|[node:url]\r\nar-OM|[node:url]\r\nur-PK|[node:url]\r\npl-PL|[node:url]\r\nro-RO|[node:url]\r\nsk-SI|[node:url]\r\nsw-TZ|[node:url]\r\nar-AE|[node:url]\r\nen-GB|[node:url]"
+  hreflang_xdefault: '[current-page:url]'
+  icon_16x16: '[theme-filter:path-to-theme]/favicons/icon-16x16.png'
+  icon_192x192: '[theme-filter:path-to-theme]/favicons/icon-192x192.png'
+  icon_32x32: '[theme-filter:path-to-theme]/favicons/icon-32x32.png'
+  icon_96x96: '[theme-filter:path-to-theme]/favicons/icon-96x96.png'
   mask_icon:
     href: '[theme-filter:path-to-theme]/favicons/icon.svg'
+    color: ''
+  msapplication_config: '[theme-filter:path-to-theme]/favicons/browserconfig.xml'
+  msapplication_square150x150logo: '[theme-filter:path-to-theme]/favicons/mstile-150x150.png'
+  msapplication_square310x310logo: '[theme-filter:path-to-theme]/favicons/mstile-310x310.png'
+  msapplication_square70x70logo: '[theme-filter:path-to-theme]/favicons/mstile-70x70.png'
+  msapplication_tilecolor: '#d71d24'
+  msapplication_wide310x150logo: '[theme-filter:path-to-theme]/favicons/mstile-310x150.png'
+  og_site_name: '[site:name]'
+  og_title: '[node:title] | [site:name]'
+  og_url: '[current-page:url]'
+  shortcut_icon: '[theme-filter:path-to-theme]/favicons/favicon.ico'
+  title: '[current-page:title] | [site:name]'
+  twitter_cards_page_url: '[current-page:url]'
+  twitter_cards_title: '[node:title]'
+  twitter_cards_type: summary
