Added CT AU & GW US & AU top message cta bar js and css, Updated product sticky nav css values to variables, fixed sata theme conditional, SATA fixed mobile menu link hover color

--- a/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
+++ b/docroot/themes/custom/gearwrench/gearwrench.libraries.yml
@@ -508,6 +508,19 @@ paragraph--full--tabs:
     - core/jquery.once
     - gearwrench/library--jquery-roving-tabindex
 
+# Top Message CTA Bar #
+paragraph--full--top-message-cta-bar:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--top-message-cta-bar.css: { }
+  js:
+    js/libraries/paragraph/full--top-message-cta-bar.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+
 
 
 # ========= Region ========= #
