--- a/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
+++ b/docroot/themes/custom/gearwrench_au/gearwrench_au.libraries.yml
@@ -529,6 +529,19 @@ paragraph--full--tabs:
     - core/jquery.once
     - gearwrench_au/library--jquery-roving-tabindex
 
+# Top Message CTA Bar #
+paragraph--full--top-message-cta-bar:
+  version: 1.x
+  css:
+    component:
+      css/libraries/paragraph/full--top-message-cta-bar.css: { }
+  js:
+    js/libraries/paragraph/full--top-message-cta-bar.js: {}
+  dependencies:
+    - core/drupal
+    - core/jquery
+    - core/jquery.once
+
 
 
 # ========= Region ========= #
