--- a/config/sata_emea/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/sata_emea/default/core.entity_form_display.node.landing_page.default.yml
@@ -40,6 +40,7 @@ third_party_settings:
         - body
         - field_component_hero
         - field_media
+        - field_top_message_cta_bar
       label: Main
       region: content
       parent_name: group_tabs
@@ -139,7 +140,7 @@ content:
     third_party_settings: {  }
   field_top_message_cta_bar:
     type: paragraphs
-    weight: 26
+    weight: 15
     region: content
     settings:
       title: Paragraph
