--- a/config/crescenttool/default/core.entity_form_display.node.landing_page.default.yml
+++ b/config/crescenttool/default/core.entity_form_display.node.landing_page.default.yml
@@ -37,6 +37,7 @@ third_party_settings:
         - body
         - field_component_hero
         - field_media
+        - field_top_message_cta_bar
       label: Main
       region: content
       parent_name: group_tabs
@@ -69,7 +70,7 @@ mode: default
 content:
   body:
     type: text_textarea_with_summary
-    weight: 0
+    weight: 1
     region: content
     settings:
       rows: 9
@@ -79,13 +80,13 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 3
+    weight: 4
     region: content
     settings: {  }
     third_party_settings: {  }
   field_component_hero:
     type: paragraphs
-    weight: 0
+    weight: 2
     region: content
     settings:
       title: Paragraph
@@ -121,7 +122,7 @@ content:
     third_party_settings: {  }
   field_media:
     type: entity_reference_autocomplete
-    weight: 0
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -131,7 +132,7 @@ content:
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 9
+    weight: 10
     region: content
     settings:
       sidebar: true
@@ -139,7 +140,7 @@ content:
     third_party_settings: {  }
   field_top_message_cta_bar:
     type: paragraphs
-    weight: 26
+    weight: 4
     region: content
     settings:
       title: Paragraph
@@ -164,27 +165,27 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 6
+    weight: 7
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 4
+    weight: 5
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 8
+    weight: 9
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 5
+    weight: 6
     region: content
     settings:
       display_label: true
@@ -199,7 +200,7 @@ content:
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 2
+    weight: 3
     region: content
     settings:
       match_operator: CONTAINS
@@ -208,7 +209,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 7
+    weight: 8
     region: content
     settings: {  }
     third_party_settings: {  }
