--- a/config/gearwrench/default/core.entity_form_display.node.page.default.yml
+++ b/config/gearwrench/default/core.entity_form_display.node.page.default.yml
@@ -12,7 +12,6 @@ dependencies:
     - node.type.page
   module:
     - field_group
-    - limited_field_widgets
     - link
     - media_library
     - metatag
@@ -40,6 +39,7 @@ third_party_settings:
         - field_media
         - body
         - field_link
+        - field_top_message_cta_bar
       label: Main
       region: content
       parent_name: group_tabs
@@ -134,7 +134,7 @@ content:
     third_party_settings: {  }
   field_top_message_cta_bar:
     type: paragraphs
-    weight: 26
+    weight: 15
     region: content
     settings:
       title: Paragraph
