feature/translations: Updated what I need for Colombia translations.

--- a/config/sata_brazil/default/field.storage.node.field_media_type.yml
+++ b/config/sata_brazil/default/field.storage.node.field_media_type.yml
@@ -13,19 +13,19 @@ settings:
   allowed_values:
     -
       value: Brochure
-      label: Brochure
+      label: Folheto
     -
       value: Catalog
-      label: Catalog
+      label: Catálogo
     -
       value: 'In the News'
-      label: 'In the News'
+      label: 'Nas noticias'
     -
       value: 'News Release'
-      label: 'News Release'
+      label: 'Comunicado de imprensa'
     -
       value: Video
-      label: Video
+      label: Vídeo
   allowed_values_function: ''
 module: options
 locked: false
