--- a/config/sata_colombia/default/field.field.node.media_page.field_media_type.yml
+++ b/config/sata_colombia/default/field.field.node.media_page.field_media_type.yml
@@ -11,7 +11,7 @@ id: node.media_page.field_media_type
 field_name: field_media_type
 entity_type: node
 bundle: media_page
-label: 'Media Type'
+label: 'Tipo de Medio'
 description: 'This is used to help determine how this content is displayed and used.'
 required: true
 translatable: false
