--- a/config/sata_colombia/default/field.storage.node.field_media_type.yml
+++ b/config/sata_colombia/default/field.storage.node.field_media_type.yml
@@ -13,19 +13,19 @@ settings:
   allowed_values:
     -
       value: Brochure
-      label: Brochure
+      label: Folleto
     -
       value: Catalog
-      label: Catalog
+      label: Catalogar
     -
       value: 'In the News'
-      label: 'In the News'
+      label: 'En las Noticias'
     -
       value: 'News Release'
-      label: 'News Release'
+      label: 'Comunicado de Prensa'
     -
       value: Video
-      label: Video
+      label: Vídeo
   allowed_values_function: ''
 module: options
 locked: false
