--- a/config/sata_colombia/default/views.view.content_recent.yml
+++ b/config/sata_colombia/default/views.view.content_recent.yml
@@ -19,7 +19,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: 'Recent content'
+      title: 'Contenido reciente'
       fields:
         title:
           id: title
@@ -153,7 +153,7 @@ display:
           admin_label: ''
           plugin_id: text_custom
           empty: true
-          content: 'No content available.'
+          content: 'No hay contenido disponible.'
           tokenize: false
       sorts:
         changed:
