--- a/config/sata_colombia/default/views.view.media_pages.yml
+++ b/config/sata_colombia/default/views.view.media_pages.yml
@@ -141,7 +141,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: 'No results were found for your selection.'
+            value: 'No se han encontrado resultados dentro de su selección.'
             format: basic_html
           tokenize: false
       sorts:
