--- a/config/sata_colombia/default/views.view.product_category.yml
+++ b/config/sata_colombia/default/views.view.product_category.yml
@@ -140,7 +140,7 @@ display:
           plugin_id: text
           empty: true
           content:
-            value: 'No results have been found within your selection.'
+            value: 'No se han encontrado resultados dentro de su selección.'
             format: basic_html
           tokenize: false
       sorts:
@@ -382,7 +382,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: false
-          content: 'Showing @current_record_count of @total results'
+          content: 'Mostrando @current_record_count de @total de resultados'
         area_text_custom:
           id: area_text_custom
           table: views
