--- a/config/sata_colombia/default/views.view.search.yml
+++ b/config/sata_colombia/default/views.view.search.yml
@@ -23,7 +23,7 @@ display:
     display_plugin: default
     position: 0
     display_options:
-      title: Search
+      title: Búsqueda
       fields:
         body:
           id: body
@@ -350,7 +350,7 @@ display:
               site_administrator: '0'
               content_editor: '0'
             expose_fields: false
-            placeholder: 'Search SATA Colombia'
+            placeholder: 'Buscar SATA Colombia'
             searched_fields_id: search_api_fulltext_searched_fields
           is_grouped: false
           group_info:
@@ -462,7 +462,7 @@ display:
           admin_label: ''
           plugin_id: result
           empty: true
-          content: "<div class=\"view-search__header-results\">Your search returned @total results.</div>\r\n<div class=\"view-search__header-product-results\">Products (@total)</div>"
+          content: "<div class=\"view-search__header-results\">Su búsqueda arrojó resultados de @total.</div>\r\n<div class=\"view-search__header-product-results\">Productos (@total)</div>"
       footer: {  }
       exposed_block: false
       display_extenders: {  }
