--- a/config/sata_colombia/default/field.field.node.media_page.field_category.yml
+++ b/config/sata_colombia/default/field.field.node.media_page.field_category.yml
@@ -6,19 +6,15 @@ dependencies:
     - field.storage.node.field_category
     - node.type.media_page
     - taxonomy.vocabulary.media_page_categories
-  content:
-    - 'taxonomy_term:media_page_categories:0d8d0002-45cb-445e-93c6-ff4bffd48388'
 id: node.media_page.field_category
 field_name: field_category
 entity_type: node
 bundle: media_page
-label: Category
+label: Categoría
 description: ''
 required: true
 translatable: false
-default_value:
-  -
-    target_default_value_callback: ''
+default_value: {  }
 default_value_callback: ''
 settings:
   handler: 'default:taxonomy_term'
