--- a/config/sata_brazil/default/views.view.product_category.yml
+++ b/config/sata_brazil/default/views.view.product_category.yml
@@ -115,13 +115,13 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Aplicar
           reset_button: false
           reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          exposed_sorts_label: 'Ordenar por'
           expose_sort_order: true
           sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_desc_label: Descrição
       access:
         type: perm
         options:
@@ -585,7 +585,7 @@ display:
           exposed: true
           expose:
             operator_id: ''
-            label: 'Set? (field_set)'
+            label: 'Definir?'
             description: ''
             use_operator: false
             operator: field_set_value_op
@@ -623,13 +623,14 @@ display:
         filter_groups: false
       use_ajax: false
       display_description: ''
-      rendering_language: pt-br
+      rendering_language: '***LANGUAGE_entity_translation***'
       display_extenders:
         ajax_history:
           enable_history: false
     cache_metadata:
       max-age: -1
       contexts:
+        - 'languages:language_content'
         - 'languages:language_interface'
         - url
         - url.query_args
