--- a/config/sata_brazil/default/views.view.related_products.yml
+++ b/config/sata_brazil/default/views.view.related_products.yml
@@ -80,13 +80,13 @@ display:
       exposed_form:
         type: basic
         options:
-          submit_button: Apply
+          submit_button: Aplicar
           reset_button: false
           reset_button_label: Reset
-          exposed_sorts_label: 'Sort by'
+          exposed_sorts_label: 'Ordenar por'
           expose_sort_order: true
           sort_asc_label: Asc
-          sort_desc_label: Desc
+          sort_desc_label: Descrição
       access:
         type: perm
         options:
