--- a/config/sata_colombia/default/views.view.search.yml
+++ b/config/sata_colombia/default/views.view.search.yml
@@ -120,14 +120,14 @@ display:
       exposed_form:
         type: bef
         options:
-          submit_button: Search
+          submit_button: Búsqueda
           reset_button: false
           reset_button_label: Reset
           exposed_sorts_label: 'Sort by'
           expose_sort_order: true
           sort_asc_label: Asc
           sort_desc_label: Desc
-          text_input_required: 'Type your search in the search box to see results.'
+          text_input_required: 'Escriba su búsqueda en el cuadro de búsqueda para ver los resultados.'
           text_input_required_format: basic_html
           bef:
             general:
@@ -139,14 +139,18 @@ display:
               allow_secondary: false
               secondary_label: 'Advanced options'
               secondary_open: false
+              reset_button_always_show: false
             filter:
               search_api_fulltext:
                 plugin_id: default
                 advanced:
+                  placeholder_text: ''
                   rewrite:
                     filter_rewrite_values: ''
                   collapsible: false
                   is_secondary: false
+                options_show_only_used: false
+                options_show_only_used_filtered: false
       access:
         type: none
         options: {  }
