feature/fix-delta-import: Updated the import to support alternating Product structures for getting categories, the ID, the Features list, the listing image, and the product images. Still needs a thorough run through of all fields.

--- a/config/sata_us/default/migrate_plus.migration.sata_us_products.yml
+++ b/config/sata_us/default/migrate_plus.migration.sata_us_products.yml
@@ -33,7 +33,7 @@ source:
     -
       name: remote_sku_group
       label: 'SKU Group'
-      selector: ../Product
+      selector: Values
     -
       name: remote_set
       label: 'Set?'
@@ -41,7 +41,7 @@ source:
     -
       name: remote_set_components
       label: 'Set Components'
-      selector: ../Product
+      selector: ProductCrossReference
     -
       name: remote_product_specifications
       label: 'Product Specifications'
@@ -49,11 +49,11 @@ source:
     -
       name: remote_product_features
       label: 'Product Features'
-      selector: ../Values
+      selector: Values
     -
       name: remote_product_classifications
       label: 'Product Classifications'
-      selector: ../Product
+      selector: Values
     -
       name: remote_launch_date
       label: 'Launch Date'
@@ -77,15 +77,15 @@ source:
     -
       name: remote_sku_overview
       label: 'SKU Overview'
-      selector: ../Values
+      selector: Values
     -
       name: remote_listing_image
       label: 'Listing Image'
-      selector: ../Product
+      selector: Values
     -
       name: remote_product_images
       label: 'Product Images'
-      selector: ../Product
+      selector: Values
     -
       name: remote_related_products
       label: 'Related Products'
