--- a/config/gearwrench/default/core.entity_view_display.node.product.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.full.yml
@@ -13,6 +13,7 @@ dependencies:
     - field.field.node.product.field_media
     - field.field.node.product.field_meta_tags
     - field.field.node.product.field_new_product
+    - field.field.node.product.field_pdfs
     - field.field.node.product.field_product_classifications
     - field.field.node.product.field_product_features
     - field.field.node.product.field_product_images
@@ -46,6 +47,15 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
+  field_pdfs:
+    type: entity_reference_entity_view
+    label: hidden
+    settings:
+      view_mode: listing
+      link: false
+    third_party_settings: {  }
+    weight: 5
+    region: content
   field_product_features:
     type: string
     label: hidden
@@ -69,7 +79,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 5
+    weight: 6
     region: content
   field_set_components:
     type: entity_reference_entity_view
