feature/25-View_and_Download_PDFs_on_PDP_extended: Got downloads styled and setup for PDFs.

--- a/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
+++ b/config/gearwrench/default/migrate_plus.migration.gearwrench_products.yml
@@ -88,7 +88,7 @@ source:
       selector: Values
     -
       name: remote_pdfs
-      label: 'PDFs'
+      label: PDFs
       selector: Values
     -
       name: remote_related_products
