--- a/config/gearwrench/default/core.entity_view_display.node.product.full.yml
+++ b/config/gearwrench/default/core.entity_view_display.node.product.full.yml
@@ -47,15 +47,6 @@ content:
     third_party_settings: {  }
     weight: 1
     region: content
-  field_pdfs:
-    type: entity_reference_entity_view
-    label: hidden
-    settings:
-      view_mode: listing
-      link: false
-    third_party_settings: {  }
-    weight: 5
-    region: content
   field_product_features:
     type: string
     label: hidden
@@ -79,7 +70,7 @@ content:
     settings:
       link: false
     third_party_settings: {  }
-    weight: 6
+    weight: 5
     region: content
   field_set_components:
     type: entity_reference_entity_view
@@ -98,6 +89,7 @@ hidden:
   field_media: true
   field_meta_tags: true
   field_new_product: true
+  field_pdfs: true
   field_product_classifications: true
   field_related_products: true
   field_set: true
