SATA: Fixed ignore settings with sata.settings:*

--- a/config/sata_brazil/default/config_export_ignore.settings.yml
+++ b/config/sata_brazil/default/config_export_ignore.settings.yml
@@ -1,10 +1,4 @@
 configuration_names:
   0: 'sata_core.settings:warranty_highest_exported_sid'
   2: 'webform.webform.*'
-  4: 'sata.settings:logo_tagline*'
-  6: 'sata.settings:price_spider_hide'
-  8: 'sata.settings:price_spider_generic_key'
-  10: 'sata.settings:price_spider_product_key'
-  12: 'sata.settings:price_spider_country'
-  14: 'sata.settings:price_spider_language'
-  16: 'sata.settings:cookiebot_cbid'
+  4: 'sata.settings:*'
