--- a/config/sata_us/default/sata.settings.yml
+++ b/config/sata_us/default/sata.settings.yml
@@ -16,8 +16,8 @@ price_spider_country: ''
 price_spider_language: ''
 price_spider_product_key: ''
 logo_tagline:
-  path: 'public://tagline-us.svg'
+  path: ''
   use_default: 0
-  url: /sites/sata_us/files/tagline-us.svg
+  url: ''
 enable_w1_grid: 0
 cookiebot_cbid: ''
