--- a/config/sata_brazil/default/sata.settings.yml
+++ b/config/sata_brazil/default/sata.settings.yml
@@ -10,9 +10,9 @@ favicon:
   path: 'public://tagline-br_0.svg'
   mimetype: image/svg+xml
 logo_tagline:
-  path: 'public://tagline-br.svg'
+  path: ''
   use_default: 0
-  url: /sites/sata_brazil/files/tagline-br.svg
+  url: ''
 enable_w1_grid: 1
 price_spider_hide: 0
 price_spider_generic_key: ''
