SATA: added tagline logo ignore config without wildcard

--- a/config/sata_brazil/default/config_ignore.settings.yml
+++ b/config/sata_brazil/default/config_ignore.settings.yml
@@ -12,4 +12,6 @@ ignored_config_entities:
   - 'sata.settings:price_spider_country'
   - 'sata.settings:price_spider_language'
   - 'sata.settings:cookiebot_cbid'
-  - 'sata.settings:logo_tagline*'
+  - 'sata.settings:logo_tagline.path'
+  - 'sata.settings:logo_tagline.use_default'
+  - 'sata.settings:logo_tagline.url'
